[tool.poetry]
name = "geolibs-cartoasync"
packages = [
    { include='cartoasync' }
]
version = "0.0.4"
description = "GeoLibs CARTOasync"
authors = ["Geographica <hello@geographica.com>"]
homepage = "https://github.com/GeographicaGS/GeoLibs-CARTOasync"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
